# pipegochi

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: clock.h  config.h  interrupts.h  led.h  logger.h  tamagochi.h  uart.h
pipegochi/: CMakeLists.txt
pipegochi/include/: clock.h  config.h  uart.h
pipegochi/src/: clock.cpp  tamagochi.cpp  uart.cpp
samples/: CMakeLists.txt
samples/buttons/: CMakeLists.txt
samples/display/: CMakeLists.txt  adafruit.cpp  u8gexe.cpp
samples/display/assets/: bitmaps.h
samples/i2c/: CMakeLists.txt
src/: clock.cpp  interrupts.cpp  led.cpp  tamagochi.cpp  uart.cpp
testers/: CMakeLists.txt  buttons.cpp  scani2c.cpp
